--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,89 @@
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #fff;
+  color: #555;
+  font-family: 'Lato', 'Arial' sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  text-rendering: optimizeLegibility;
+}
+
+.clearfix {zoom: 1}
+.clearfix:after {
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+} */
+
 .App {
-  text-align: center;
+  height: 100vh;
+  text-align: left;
+  background-color: rgb(228, 226, 226);
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.ClassList {
+  /* height: 80vh;
+  background-color: #fff;
+  margin: 20vw; */
+  width:70%;
+  height:525px;
+  margin:0 auto;
+  background:#fff;
+  position:absolute;
+  left:15%;
+  top:50%;
+  margin-top:-250px;
+  overflow: scroll;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  /* min-height: 100vh; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding: .3em;
+.ClassList::-webkit-scrollbar {
+  display: none;
+ }
+
+.students {
+  max-width: 100%;
+  border-bottom: 1px solid rgb(128, 128, 128);
+  /* padding: 2px; */
+  padding-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.thumbnail {
+  border-radius: 50%;
+  border: 1px solid #000;
+  float: left;
+  height: 100px;
+  width: 100px;
+  margin-right: 20px;
+  margin-top: 2%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .divider {
+  border-bottom: 1px solid rgb(128, 128, 128);
+} */
+
+h4 {
+  font-size: 30px;
+  text-transform: uppercase;
+  margin-bottom: 0%;
+  margin-top: 2%;
 }
 
 ul {
   list-style-type: none;
+  margin-left: 14%;
+  color: rgb(150, 150, 150);
+  margin-top: 1%;
+}
+
+li {
+  padding-top: 0.5%;
 }
