--- a/src/App.css
+++ b/src/App.css
@@ -30,18 +30,16 @@ html {
 }
 
 .ClassList {
-  /* height: 80vh;
-  background-color: #fff;
-  margin: 20vw; */
-  width:70%;
-  height:525px;
-  margin:0 auto;
+  width: 70%;
+  height: 525px;
+  margin: 0 auto;
   background:#fff;
-  position:absolute;
-  left:15%;
-  top:50%;
-  margin-top:-250px;
-  overflow: scroll;
+  position: absolute;
+  left: 15%;
+  top: 50%;
+  margin-top: -250px;
+  overflow-y: scroll;
+  overflow-x: hidden;
   border-radius: 10px;
 }
 
@@ -52,7 +50,6 @@ html {
 .students {
   max-width: 100%;
   border-bottom: 1px solid rgb(128, 128, 128);
-  /* padding: 2px; */
   padding-left: 20px;
 }
 
@@ -65,10 +62,6 @@ html {
   margin-right: 20px;
   margin-top: 2%;
 }
-
-/* .divider {
-  border-bottom: 1px solid rgb(128, 128, 128);
-} */
 
 h4 {
   font-size: 30px;
@@ -86,4 +79,24 @@ ul {
 
 li {
   padding-top: 0.5%;
+}
+
+input {
+  font-size: 16px;
+  width: 94%;
+  height: 35px;
+  border-top: none;
+  border-left: none;
+  border-right:none;
+  border-bottom: 1px solid rgb(128, 128, 128);
+  margin-left: 20px;
+  color: rgb(150, 150, 150);
+}
+
+input:focus{
+  outline: none;
+}
+
+::placeholder {
+  color: rgb(150, 150, 150);
 }
