--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  background-color: #fff;
-  color: #555;
-  font-family: 'Lato', 'Arial' sans-serif;
-  font-weight: 400;
-  font-size: 20px;
-  text-rendering: optimizeLegibility;
-}
-
-.clearfix {zoom: 1}
-.clearfix:after {
-  content: '.';
-  clear: both;
-  display: block;
-  height: 0;
-  visibility: hidden;
-} */
-
 .App {
   height: 100vh;
   text-align: left;
@@ -99,4 +75,24 @@ input:focus{
 
 ::placeholder {
   color: rgb(150, 150, 150);
+}
+
+.collapsible:after {
+  content: '\02795'; 
+  font-size: 30px;
+  float: right;
+  margin-right: 25px;
+}
+
+.active:after {
+  content: "\2796";
+}
+
+button {
+  border: none;
+  float: right;
+}
+
+button:focus {
+  outline: none;
 }
